ros/log/build_2025-02-23_22-08-14/uwb/stderr.log
  File "/home/Judy/safmc_uwb/ros/install/uwb/lib/python3.10/site-packages/uwb/uwb_rewrite_2.py", line 284
    = distance_matrix[i][0] 
    ^
SyntaxError: invalid syntax

